--- a/oib-responder/oib-app-service/pom.xml
+++ b/oib-responder/oib-app-service/pom.xml
@@ -17,7 +17,31 @@
     </properties>
 
     <build>
-        <plugins>
+         <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.0.201403182114</version>
+                <configuration>
+                  <dataFile>${basedir}/target/jacoco.exec</dataFile>
+                  <propertyName>jacoco.agent.argLine</propertyName>
+                </configuration>
+                <executions>
+                  <execution>
+                    <id>jacoco-initialize</id>
+                    <goals>
+                      <goal>prepare-agent</goal>
+                    </goals>
+                  </execution>
+                  <execution>
+                    <id>jacoco-site</id>
+                    <phase>install</phase>
+                    <goals>
+                      <goal>report</goal>
+                    </goals>
+                  </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -27,11 +51,17 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-        </plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.16</version>
+              <configuration>
+                <argLine>${jacoco.agent.argLine}</argLine>
+              </configuration>
+           </plugin>
+          </plugins>
     </build>
-
-    <dependencies>
-        
+<dependencies>
         <dependency>
             <groupId>gov.nih.nlm.rxnav</groupId>
             <artifactId>rxnorm-rest-model</artifactId>
