--- a/oib-responder/rxnorm-rest-model/pom.xml
+++ b/oib-responder/rxnorm-rest-model/pom.xml
@@ -54,7 +54,38 @@
                     <verbose>true</verbose>
                 </configuration>
             </plugin>
-            
+<plugin>
+  <groupId>org.jacoco</groupId>
+  <artifactId>jacoco-maven-plugin</artifactId>
+  <version>0.7.0.201403182114</version>
+  <configuration>
+    <dataFile>${basedir}/target/jacoco.exec</dataFile>
+    <propertyName>jacoco.agent.argLine</propertyName>
+  </configuration>
+  <executions>
+    <execution>
+      <id>jacoco-initialize</id>
+      <goals>
+        <goal>prepare-agent</goal>
+      </goals>
+    </execution>
+    <execution>
+      <id>jacoco-site</id>
+      <phase>install</phase>
+      <goals>
+        <goal>report</goal>
+      </goals>
+    </execution>
+  </executions>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.16</version>
+  <configuration>
+    <argLine>${jacoco.agent.argLine}</argLine>
+  </configuration>
+</plugin>            
         </plugins>
     </build>
     
