--- a/oib-responder/oib-app-service/pom.xml
+++ b/oib-responder/oib-app-service/pom.xml
@@ -18,31 +18,17 @@
 
     <build>
          <plugins>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.0.201403182114</version>
-                <configuration>
-                  <dataFile>${basedir}/target/jacoco.exec</dataFile>
-                  <propertyName>jacoco.agent.argLine</propertyName>
-                </configuration>
-                <executions>
-                  <execution>
-                    <id>jacoco-initialize</id>
-                    <goals>
-                      <goal>prepare-agent</goal>
-                    </goals>
-                  </execution>
-                  <execution>
-                    <id>jacoco-site</id>
-                    <phase>install</phase>
-                    <goals>
-                      <goal>report</goal>
-                    </goals>
-                  </execution>
-                </executions>
-            </plugin>
-            <plugin>
+<plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.5.1</version>
+    <configuration>
+      <argLine>-XX:-UseSplitVerifier</argLine>
+      <format>xml</format>
+      <aggregate>true</aggregate>
+    </configuration>
+</plugin>            
+<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
@@ -55,9 +41,6 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>2.16</version>
-              <configuration>
-                <argLine>${jacoco.agent.argLine}</argLine>
-              </configuration>
            </plugin>
           </plugins>
     </build>
