--- a/oib-responder/oib-index-manager/pom.xml
+++ b/oib-responder/oib-index-manager/pom.xml
@@ -32,29 +32,16 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+
 <plugin>
-  <groupId>org.jacoco</groupId>
-  <artifactId>jacoco-maven-plugin</artifactId>
-  <version>0.7.0.201403182114</version>
-  <configuration>
-    <dataFile>${basedir}/target/jacoco.exec</dataFile>
-    <propertyName>jacoco.agent.argLine</propertyName>
-  </configuration>
-  <executions>
-    <execution>
-      <id>jacoco-initialize</id>
-      <goals>
-        <goal>prepare-agent</goal>
-      </goals>
-    </execution>
-    <execution>
-      <id>jacoco-site</id>
-      <phase>install</phase>
-      <goals>
-        <goal>report</goal>
-      </goals>
-    </execution>
-  </executions>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.5.1</version>
+    <configuration>
+      <argLine>-XX:-UseSplitVerifier</argLine>
+      <format>xml</format>
+      <aggregate>true</aggregate>
+    </configuration>
 </plugin>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
